[gd_scene load_steps=44 format=3 uid="uid://b0dj41n5d3gky"]

[ext_resource type="Script" path="res://world.gd" id="1_6luv2"]
[ext_resource type="PackedScene" uid="uid://cu7u1jhhw0e4l" path="res://bird.tscn" id="1_ogqwa"]
[ext_resource type="PackedScene" uid="uid://c4kq53kd6ioli" path="res://pole.tscn" id="2_8joiq"]
[ext_resource type="Texture2D" uid="uid://df1sefaygy12f" path="res://Game Objects/base.png" id="3_5wn36"]
[ext_resource type="Texture2D" uid="uid://bi4pfxqd3ovu8" path="res://Game Objects/background-day.png" id="4_8c6pn"]
[ext_resource type="FontFile" uid="uid://bynmjk2lsamc4" path="res://flappy-font.ttf" id="4_ggkkf"]
[ext_resource type="Script" path="res://CanvasLayer.gd" id="5_a2lhp"]
[ext_resource type="Texture2D" uid="uid://ce5o8h7wy62b6" path="res://Game Objects/gameover.png" id="5_hjpha"]
[ext_resource type="Texture2D" uid="uid://wtnhvl62lrmw" path="res://Game Objects/background-night.png" id="6_4g23g"]
[ext_resource type="Script" path="res://pole_remover.gd" id="6_bt4rd"]
[ext_resource type="Shortcut" uid="uid://cw5o3y0ebbn27" path="res://click.tres" id="6_jhhgj"]
[ext_resource type="Texture2D" uid="uid://d1oyroutnrwia" path="res://Game Objects/score.png" id="7_x88i0"]
[ext_resource type="Texture2D" uid="uid://bjx562h167lsg" path="res://Game Objects/new_high_score.png" id="9_qikyg"]
[ext_resource type="Texture2D" uid="uid://c64u12hu8y3l1" path="res://Game Objects/start_screen.png" id="9_too3i"]
[ext_resource type="Texture2D" uid="uid://0aj4ukrro6xu" path="res://Game Objects/ok.png" id="10_2pvg1"]
[ext_resource type="Texture2D" uid="uid://wna5lhplfsu0" path="res://Game Objects/Bird_lite.png" id="10_h3f62"]
[ext_resource type="Texture2D" uid="uid://bs32fnmukc60u" path="res://Game Objects/start.png" id="11_4lc20"]
[ext_resource type="AudioStream" uid="uid://spm5xr4410ra" path="res://Sound Efects/point_plus.wav" id="11_38r1t"]
[ext_resource type="Texture2D" uid="uid://chphl6rdl7cit" path="res://Game Objects/ok_pressed.png" id="11_uvu2t"]
[ext_resource type="Texture2D" uid="uid://dbqkhrlayxwx6" path="res://Game Objects/reset.png" id="12_3lr4n"]
[ext_resource type="Texture2D" uid="uid://dtda6ogjwufks" path="res://Game Objects/start_pressed.png" id="13_1pn7l"]
[ext_resource type="Texture2D" uid="uid://cwb6cfxwllfet" path="res://Game Objects/reset_pressed.png" id="13_4n68i"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4v14w"]
size = Vector2(359.5, 112.5)

[sub_resource type="Animation" id="Animation_l3n36"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base/Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(12, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base/Base2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(360, 0)]
}

[sub_resource type="Animation" id="Animation_0xvti"]
resource_name = "new_animation"
length = 2.99
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("base/Base:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(11, 0), Vector2(-349, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("base/Base2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.99),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(371, 0), Vector2(11, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qqlii"]
_data = {
"RESET": SubResource("Animation_l3n36"),
"new_animation": SubResource("Animation_0xvti")
}

[sub_resource type="Animation" id="Animation_1pnmn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background-night:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.972549, 0.972549, 0.972549, 1)]
}

[sub_resource type="Animation" id="Animation_sttty"]
resource_name = "new_animation"
length = 120.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background-night:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 118.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 119),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0.972549, 0.972549, 0.972549, 1), Color(0.541176, 0.541176, 0.541176, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_incqv"]
_data = {
"RESET": SubResource("Animation_1pnmn"),
"new_animation": SubResource("Animation_sttty")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wu7la"]
size = Vector2(168.5, 1901)

[sub_resource type="AtlasTexture" id="AtlasTexture_3oey4"]
atlas = ExtResource("9_too3i")
region = Rect2(0, 0, 184, 267)

[sub_resource type="AtlasTexture" id="AtlasTexture_dimqm"]
atlas = ExtResource("9_too3i")
region = Rect2(184, 0, 184, 267)

[sub_resource type="AtlasTexture" id="AtlasTexture_8w5bs"]
atlas = ExtResource("9_too3i")
region = Rect2(368, 0, 184, 267)

[sub_resource type="AtlasTexture" id="AtlasTexture_tcbfj"]
atlas = ExtResource("9_too3i")
region = Rect2(552, 0, 184, 267)

[sub_resource type="SpriteFrames" id="SpriteFrames_ewa53"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3oey4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dimqm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8w5bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tcbfj")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_3yxfl"]
atlas = ExtResource("10_h3f62")
region = Rect2(0, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_r1kkh"]
atlas = ExtResource("10_h3f62")
region = Rect2(25, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkkgx"]
atlas = ExtResource("10_h3f62")
region = Rect2(50, 0, 25, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_4aht5"]
atlas = ExtResource("10_h3f62")
region = Rect2(75, 0, 25, 25)

[sub_resource type="SpriteFrames" id="SpriteFrames_mq8cx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3yxfl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r1kkh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkkgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4aht5")
}],
"loop": true,
"name": &"default",
"speed": 6.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_etdnv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ri5ul"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j3lw8"]

[node name="World" type="Node2D"]
modulate = Color(0.972549, 0.972549, 0.972549, 1)
script = ExtResource("1_6luv2")

[node name="point" type="Label" parent="."]
z_index = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 152.5
offset_top = 5.0
offset_right = 207.5
offset_bottom = 66.0
grow_horizontal = 2
mouse_filter = 1
theme_override_fonts/font = ExtResource("4_ggkkf")
theme_override_font_sizes/font_size = 60
text = "0"

[node name="Bird" parent="." instance=ExtResource("1_ogqwa")]
position = Vector2(172, 356)
can_die = true

[node name="base" type="StaticBody2D" parent="."]
z_index = 1
position = Vector2(169, 584)
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="base"]
position = Vector2(13.25, 0)
shape = SubResource("RectangleShape2D_4v14w")

[node name="Base" type="Sprite2D" parent="base"]
position = Vector2(12, 0)
scale = Vector2(1.07143, 1)
texture = ExtResource("3_5wn36")

[node name="Base2" type="Sprite2D" parent="base"]
position = Vector2(360, 0)
scale = Vector2(1.071, 1)
texture = ExtResource("3_5wn36")

[node name="Timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_qqlii")
}
autoplay = "new_animation"

[node name="AnimationPlayer2" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_incqv")
}
autoplay = "new_animation"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("5_a2lhp")

[node name="game_over" type="TextureButton" parent="CanvasLayer"]
process_mode = 3
z_index = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -180.0
offset_top = -323.0
offset_right = 180.0
offset_bottom = 317.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
shortcut = ExtResource("6_jhhgj")
shortcut_in_tooltip = false
texture_normal = ExtResource("5_hjpha")
ignore_texture_size = true
stretch_mode = 3

[node name="TextureRect" type="TextureRect" parent="CanvasLayer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -58.0
offset_bottom = 58.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("7_x88i0")
stretch_mode = 3

[node name="medal" type="TextureRect" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 93.0
offset_top = 43.0
offset_right = 137.0
offset_bottom = 87.0

[node name="shine" type="TextureRect" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 130.0
offset_top = 39.0
offset_right = 145.0
offset_bottom = 48.0
expand_mode = 2
stretch_mode = 4

[node name="new" type="TextureRect" parent="CanvasLayer/TextureRect"]
visible = false
layout_mode = 0
offset_left = 213.0
offset_top = 60.0
offset_right = 236.0
offset_bottom = 69.0
texture = ExtResource("9_qikyg")
expand_mode = 2
stretch_mode = 4

[node name="score" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 203.0
offset_top = 32.0
offset_right = 272.0
offset_bottom = 58.0
theme_override_fonts/font = ExtResource("4_ggkkf")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 2
vertical_alignment = 1

[node name="high_score" type="Label" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 201.0
offset_top = 74.0
offset_right = 271.0
offset_bottom = 100.0
theme_override_fonts/font = ExtResource("4_ggkkf")
theme_override_font_sizes/font_size = 22
horizontal_alignment = 2
vertical_alignment = 1

[node name="ok" type="TextureButton" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 207.0
offset_top = 118.0
offset_right = 287.0
offset_bottom = 146.0
focus_neighbor_right = NodePath("../start")
mouse_filter = 1
texture_normal = ExtResource("10_2pvg1")
texture_pressed = ExtResource("11_uvu2t")

[node name="start" type="TextureButton" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 73.0
offset_top = 118.0
offset_right = 153.0
offset_bottom = 146.0
focus_neighbor_left = NodePath("../ok")
mouse_filter = 1
shortcut = ExtResource("6_jhhgj")
shortcut_in_tooltip = false
texture_normal = ExtResource("11_4lc20")
texture_pressed = ExtResource("13_1pn7l")

[node name="reset" type="TextureButton" parent="CanvasLayer/TextureRect"]
layout_mode = 0
offset_left = 140.0
offset_top = 148.0
offset_right = 220.0
offset_bottom = 176.0
focus_neighbor_right = NodePath("../start")
mouse_filter = 1
action_mode = 0
texture_normal = ExtResource("12_3lr4n")
texture_pressed = ExtResource("13_4n68i")

[node name="Background-day" type="Sprite2D" parent="."]
z_index = -3
position = Vector2(180, 320)
scale = Vector2(1.25, 1.25)
texture = ExtResource("4_8c6pn")

[node name="Background-night" type="Sprite2D" parent="."]
self_modulate = Color(1, 1, 1, 0)
z_index = -2
position = Vector2(180, 320)
scale = Vector2(1.25, 1.25)
texture = ExtResource("6_4g23g")

[node name="pole_remover" type="Area2D" parent="."]
process_mode = 3
collision_mask = 3
monitorable = false
script = ExtResource("6_bt4rd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="pole_remover"]
position = Vector2(-248.25, 289.5)
shape = SubResource("RectangleShape2D_wu7la")

[node name="Pole" parent="." instance=ExtResource("2_8joiq")]
position = Vector2(-3, 290)

[node name="start" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(179.5, 263.75)
scale = Vector2(1.83152, 1.96442)
sprite_frames = SubResource("SpriteFrames_ewa53")

[node name="bird_lite" type="AnimatedSprite2D" parent="start"]
position = Vector2(-6.70208, 45.7697)
scale = Vector2(1.34, 1.33)
sprite_frames = SubResource("SpriteFrames_mq8cx")
autoplay = "default"
frame_progress = 0.379516

[node name="Button" type="Button" parent="start"]
offset_left = -99.0
offset_top = -136.0
offset_right = 99.0
offset_bottom = 191.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_etdnv")
theme_override_styles/hover = SubResource("StyleBoxEmpty_ri5ul")
theme_override_styles/focus = SubResource("StyleBoxEmpty_j3lw8")
action_mode = 0
shortcut = ExtResource("6_jhhgj")
shortcut_in_tooltip = false
flat = true

[node name="point_plus" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("11_38r1t")

[connection signal="die" from="Bird" to="." method="_on_bird_die"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/game_over" to="CanvasLayer" method="_on_game_over_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/ok" to="CanvasLayer" method="_on_ok_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="CanvasLayer/TextureRect/reset" to="CanvasLayer" method="_on_reset_pressed"]
[connection signal="area_entered" from="pole_remover" to="pole_remover" method="_on_area_entered"]
[connection signal="pressed" from="start/Button" to="." method="_on_button_pressed"]
